--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </ol>
     <hr size="2" noshade>
     <h3>Work Experience</h3>
-    <table>
+    <table cellspacing ="10">
       <thead>
         <tr>
           <th>Date</th>        
@@ -55,10 +55,10 @@
     </table>
     <hr size="2" noshade>
     <h3>Skills</h3>
-    <table>
+    <table cellspacing ="10">
       <tr>
         <td>
-          <table>        
+          <table cellspacing ="10">        
             <tr>
               <td>python</td>
               <td>⭐⭐⭐⭐</td>
@@ -67,7 +67,7 @@
               <td>C Programing</td>
               <td>⭐⭐⭐⭐</td>
             </tr>           
-          </table>
+          </table cellspacing ="10">
         </td>
         <td>
           <table>        
