added contact no

--- a/Contact.html
+++ b/Contact.html
@@ -7,8 +7,8 @@
     <title>Contact</title>
 </head>
 <body>
-    <h1>My Contacts</h1>
-    <p>8380828173</p>
+    <h1>My Contact Details</h1>
+    <p><strong>Contact No.</strong>-8380828173</p>
     <p><strong>Email</strong>- viditkhandelwal36@gmail.com</p>
     <p><strong>Address</strong>- Bajajnagar, Aurangabad.</p>
     
